--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -263,7 +263,7 @@ section .title::after {
 
 /* about section styling */
 .about .title::after {
-    content: "who i am";
+    content: "who I am";
     color: #000;
     background-color: #FFF;
 }
@@ -300,14 +300,12 @@ section .title::after {
 
 .about .about-content .right a {
     display: inline-block;
-    background: rgb(112, 106, 224);
-    color: #fff;
+    background: #fff;
+    color: rgb(18, 6, 244);
     font-size: 20px;
     font-weight: 500;
-    padding: 10px 30px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid rgb(112, 106, 224);
+    padding: 10px 20px;
+    border-radius: 5px;
     transition: all 0.3s ease;
 }
 
